--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 alpaca_trade_api==3.2.0
-atproto==0.0.59
-httpx==0.28.1
-numpy==2.2.3
+atproto==0.0.5
+httpx==0.24.0
+numpy==2.1.3
 pandas==2.2.3
 pandas_market_calendars==4.6.1
 python-dotenv==1.0.1
@@ -9,3 +9,6 @@ pytz==2025.1
 scikit_learn==1.6.1
 vaderSentiment==3.3.2
 xgboost==2.1.4
+tensorflow-metal==1.2.0
+tensorflow==2.19.0
+keras==3.9.1
